--- a/ProjectTemplate/appsettings.Development.json
+++ b/ProjectTemplate/appsettings.Development.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionString": "Server=myServerName\\myInstanceName;Database=myDataBase;User Id=myUsername;Password=myPassword;"
+  "ConnectionString": "Server=localhost\\SQLEXPRESS;Database=Cotizaciones;Trusted_Connection=True;TrustServerCertificate=true;"
 }
